apps/wiki-cedille/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-cedille
  kube-score/ignore: container-image-pull-policy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiki-cedille
  template:
    metadata:
      labels:
        app: wiki-cedille
    spec:
      containers:
        - name: wiki-cedille
          image: ghcr.io/clubcedille/wiki-cedille:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 500m
              memory: 256Mi
              ephemeral-storage: 1Gi
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
